# chathub

./: .gitignore  Makefile  README.md  config.json.template  requirements.txt
api/: Dockerfile  api.py  data_types.py  requirements.txt
chathub_bot/: Dockerfile  makefile  pyproject.toml  readme.md  requirements.txt
chathub_bot/bot/: __init__.py  __main__.py  babel_debug.py  bot.py  commands_handler.py  data_handler.py  dev_router.py  message_broker_callback.py  middlewares.py  test_router.py  tmp_files_manager.py  utils.py
chathub_bot/bot/locales/: bot.pot
chathub_bot/bot/locales/en/LC_MESSAGES/: bot.po
chathub_bot/bot/locales/ru/LC_MESSAGES/: bot.po
chathub_bot/bot/scenes/: __init__.py  base.py  callback_data.py  data_handler.py  dating.py  profile.py  profile_editing.py  registration.py
chathub_bot/tests/: send_all_locale_messages.py
client/: index.html  package-lock.json  package.json  routes.ts  vite.config.ts
client/src/: App.vue  main.ts
connectors/: makefile  pyproject.toml  readme.md
connectors/chathub_connectors/: __init__.py  aws_connectors.py  postgres_connector.py  rabbitmq_connector.py  redis_connector.py
connectors/connectors/: redis_connector.py
connectors/tests/: test_rabbitmq_connector.py
datemaker/: Dockerfile  pyproject.toml  pytest.ini  readme.md  requirements.txt
datemaker/datemaker/: __init__.py  __main__.py  dating_event_runner.py  demo.py  finite_state_machine.py  intelligent_agent.py  meet_api_controller.py  (+3 more)
matchmaker/: matchmaker.py
server/: api.py  chat_server.py  requirements.txt
src/: redis.py
utils/: pyproject.toml
websocket-server/: Dockerfile  server.py  system_messages.py
(+38 files in other folders)
