[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xoxo_bot"
version = "0.1"
requires-python = "==3.13"
description = "XOXO tg bot"
dependencies = [
    "aiogram[i18n]",
    "chathub_connectors==0.2.3",
    "Babel",
    "kombu==5.4.2",
]
