[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chathub_connectors"
version = "0.2.1"
requires-python = ">=3.10"
description = "Connectors for chathub project"
dependencies = [
    "redis==5.0.1",
    "asyncpg==0.29.0",
    "pika==1.3.2",
    "boto3==1.35.0",
]
