[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chathub_connectors"
version = "1.0.1"
requires-python = ">=3.10"
description = "Connectors for chathub project"
dependencies = [
    "redis==5.0.1",
    "asyncpg==0.30.0",
    "boto3==1.35.0",
    "psycopg2-binary==2.9.10",
    "aio_pika==9.5.4",
    "pika==1.3.2",
]
