[build-system]
requires = ["setuptools>=80.7.1", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "chathub_connectors"
version = "1.0.6"
requires-python = ">=3.10"
description = "Connectors for chathub project"
dependencies = [
    "redis==5.0.1",
    "asyncpg==0.30.0",
    "boto3==1.35.0",
    "psycopg2-binary==2.9.10",
    "aio_pika==9.5.4",
    "pika==1.3.2",
]
